--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "browser": "build/index.js",
   "main": "build/index.js",
   "types": "build/index.d.ts",
+  "files": [
+    "build/"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:balena-io-modules/balena-es-version.git"
