--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "author": "Pagan Gazzard <page@balena.io>",
   "scripts": {
-    "lint": "balena-lint --typescript src test",
-    "lint-fix": "balena-lint --typescript --fix src test",
+    "lint": "balena-lint src test",
+    "lint-fix": "balena-lint --fix src test",
     "pretest": "npm run build && npx tsc --noEmit --project tsconfig.test.json",
     "test": "mocha --require ts-node/register/transpile-only test/*.ts",
     "posttest": "npm run lint",
@@ -23,17 +23,16 @@
     "prepack": "npm run build"
   },
   "license": "Apache-2.0",
-  "dependencies": {},
   "devDependencies": {
-    "@balena/lint": "^5.1.0",
+    "@balena/lint": "^6.1.1",
     "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
+    "@types/mocha": "^9.0.0",
     "chai": "^4.2.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.7",
-    "mocha": "^7.2.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.3"
+    "lint-staged": "^11.2.6",
+    "mocha": "^9.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   },
   "husky": {
     "hooks": {
@@ -42,7 +41,7 @@
   },
   "lint-staged": {
     "*.ts": [
-      "balena-lint --typescript --fix"
+      "balena-lint --fix"
     ]
   }
 }
